--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
-node_modules/**/*
+.DS_Store
+node_modules/
+npm-debug.log
+yarn-error.log
 
-dist/**/*
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
