--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "html5shiv": "latest",
     "respond": "latest",
     "normalize.css": "latest",
-    "magnific-popup": "latest"
+    "magnific-popup": "latest",
+    "owl.carousel": "OwlCarousel2#^2.3.4"
   },
   "description": "",
   "main": "",
