--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,20 @@
 {
+    "parserOptions": {
+        "ecmaVersion": 8
+    },
+    "env": {
+        "es6": true
+    },
     "extends": "eslint:recommended",
-    "parser": "babel-eslint",
     "globals": {
         "window" : true,
         "document" : true,
+        "$" : true,
         "console" : true
     },
+    "plugins": [
+    ],
     "rules": {
         "no-console": "off"
-    },
-    {
-        "esversion": 6
     }
 }
