--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
+    "babel-eslint": "^10.0.1",
     "bower": "^1.8.4",
     "browser-sync": "^2.24.6",
     "del": "^3.0.0",
@@ -34,5 +35,6 @@
   },
   "author": "CraXviL",
   "license": "ISC",
-  "dependencies": {}
+  "dependencies": {
+  }
 }
